tests with tone.js for audio synth

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-react": "^6.5.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
+    "tone": "^0.6.1",
     "webpack": "^1.13.0"
   },
   "devDependencies": {
