--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --progress --colors --port 8081",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "start-storybook -p 9001"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "webpack": "^1.13.0"
   },
   "devDependencies": {
+    "@kadira/storybook": "^1.27.0",
     "webpack-dev-server": "^1.14.1"
   }
 }
